# axum-fault-tolerance

./: Cargo.toml  README.md
axum-fault-tolerance-macros/: Cargo.toml
axum-fault-tolerance-macros/src/: lib.rs
docs/: guide.md  microprofile-fault-tolerance-spec-4.1.2.html
docs/facets/: README.md  bulkhead.md  circuit-breaker.md  fallback.md  retry.md  timeout.md
examples/: classification_and_fallback.rs  method_attributes.rs  policy_stack.rs  tower_service.rs
src/: lib.rs
